--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  max-width: 960px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -37,36 +37,35 @@
   padding: 2em;
 }
 
-.read-the-docs {
-  color: #888;
-}
-
 .products-list {
+  width: 580px;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
 }
 
 .product {
   flex: 1;
   border-radius: 4px;
   background: rgb(238, 232, 232);
-  padding: 8px;
-  max-width: 250px;
+  padding: 24px;
+  width: 360px;
   min-height: 250px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 36px;
 }
 
 .product h2 {
   color: rgb(58, 56, 56);
   font-size: 12px;
-  margin-top: auto;
+  text-transform: uppercase;
+  margin-top: 24px;
 }
 
 .product img {
-  width: 200px;
-  height: 200px;
-  object-fit: contain;
+  width: 280px !important;
 }
