--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 #root {
-  max-width: 960px;
+  max-width: 100%;
   margin: 0 auto;
   padding: 2rem;
+  box-sizing: border-box;
   text-align: center;
 }
 
